CHANGELOG
=========


1.2.5 (unreleased)
------------------

- Nothing changed yet.


1.2.4 (2013-11-15)
------------------

- Fix close selector for overlay in billboardads.
  [Julian Infanger]

- Replace jq with $ in javascript file.
  [Julian Infanger]


1.2.3 (2013-08-14)
------------------

- Add permissionmapping for ftw.lawgiver
  [elioschmutz]


1.2.2 (2013-03-04)
------------------

- Use lower email address in billboardad as default contact mail.
  [Julian Infanger]

- Use colorbox to display images in overlay.
  [Julian Infanger]


1.2.1 (2012-10-17)
------------------

- Reindex file after uploading. Add class to button in simple upload form.
  [Julian Infanger]

- Updated help text for price in billboard ad. Fixed english in registry.
  [Julian Infanger]


1.2 (2012-10-05)
----------------

- Make displaying currency of billboard ads configurable per site.
  In portal_registry there are three new configuration options:

  - name or symbol of the currency
  - character for seperating floating numbers
  - thousands seperator for grouping large numbers

  [tschanzt]


1.1.8 (2012-05-15)
------------------

- Fix actions portlet translations.
  [mathias.leimgruber]


1.1.7 (2012-05-15)
------------------

- Fix add image translation and use overlay for adding a file.
  [mathias.leimgruber]


1.1.6 (2012-05-09)
------------------

- Fix typo and use image_large as image size in overlay.
  [mathias.leimgruber]


1.1.5 (2012-03-26)
------------------

- The default expiration date can be defined in registry.
  [Julian Infanger]


1.1.4 (2012-03-05)
------------------

- Use a list instead of a table to display billboardcategory-listing.
  [Julian Infanger]

- Added default class to table in billboardcategory view.
  [Julian Infanger]


1.1.3 (2011-12-21)
------------------

- fix manifest.in


1.1.2 (2011-12-21)
------------------

- add assignments for action-portlet
  [eschmutz]


1.1.1 (2011-08-11)
------------------
