@@ -1,0 +1,25 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="context/main_template/macros/master"
+      i18n:domain="ftw.billboard">
+
+<body>
+
+<div metal:fill-slot="top_slot"
+              tal:define="dummy python:request.set('disable_border', 1)" />
+
+    <metal:main fill-slot="main">
+        <metal:main define-macro="main">
+
+        <h1 i18n:translate="label_conditions">Billboard conditions</h1>
+
+        <div tal:replace="structure context/getConditions" />
+
+      </metal:main>
+    </metal:main>
+
+</body>
+</html>
