@@ -5,7 +5,11 @@ CHANGELOG
 1.2.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Implement billboard conditions.
+  [mathias.leimgruber]
+
+- Plone 4.3 compatibility.
+  [mathias.leimgruber]
 
 
 1.2.4 (2013-11-15)
